<resources>
    <string name="app_name">Ramadan 2018</string>
    <string name="title_home">সময়সূচি</string>
    <string name="title_dua">দোয়া ও নিয়ত</string>
    <string name="title_division">আপনার জেলা নির্বাচন করুন</string>
    <string name="title_roja_vangar_karon">রোজা ভঙ্গের কারণসমূহ</string>
    <string name="title_notifications">Notifications</string>
    <string name="iftar">ইফতার</string>
    <string name="seheri">সেহেরী</string>
    <string name="tarikh">তারিখ</string>
    <string name="titleBanglaUcharon">বাংলায় উচ্চারণ: </string>
    <string name="titleBanglaMenaing">বাংলায় অর্থ: </string>
    <string name="ramdan_no_title">রমযান</string>
    <string name="rahmoter10days">রহমতের ১০ দিন</string>
    <string name="romjanerMessage">"আল্লাহ্‌ তা'আলা বলেন \"রোযা আমার জন্য এবং এর প্রতিদান আমি নিজেই দেবো (হাদীসে কুদসী)\""</string>
    <string-array name="devisoin_list">
        <item>ঢাকা</item>
        <item>বরিশাল</item>
        <item>সিলেট</item>
        <item>রাজশাহী</item>
        <item>রংপুর</item>
        <item>ময়মনসিংহ</item>
        <item>চট্টগ্রাম</item>
        <item>খুলনা</item>
    </string-array>
    <string name="roja_vonger_karon_details">
        *ইচ্ছাকৃত পানাহার করলে।\n\n
        *স্ত্রী সহবাস করলে ।\n\n
        * কুলি করার সময় হলকের নিচে পানি চলে গেলে (অবশ্য রোজার কথা স্মরণ না থাকলে রোজা ভাঙ্গবে না)।\n\n
        * জবরদস্তি করে কেহ রোজা ভাঙ্গালে ।\n\n
        *ইনজেকশান বা স্যালাইরনর মাধ্যমে দেমাগে ওষধ পৌছালে।\n\n
        * কংকর পাথর বা ফলের বিচি গিলে ফেললে।\n\n
        *সূর্যাস্ত হয়েছে মনে করে ইফতার করার পর দেখা গেল সুর্যাস্ত হয়নি।\n\n
        *দাঁত হতে ছোলা পরিমান খাদ্য-দ্রব্য গিলে ফেললে।\n\n
        * ধূমপান করা, ইচ্ছাকৃত লোবান বা আগরবাতি জ্বালায়ে ধোয়া গ্রহন করলে।\n\n
        *মুখ ভর্তি বমি গিলে ফেললে ।\n\n
        * রাত্রি আছে মনে করে সোবহে সাদিকের পর পানাহার করলে।\n\n
        * মুখে পান রেখে ঘুমিয়ে পড়ে সুবহে সাদিকের পর নিদ্রা হতে জাগরিত হওয়া এ অবস্থায় শুধু কাজা ওয়াজিব হবে।\n\n\n\n
আর যদি রোজা অবস্থায় ইচ্ছাকৃতভাবে স্বামী-স্ত্রী সহবাস অথবা পানাহার করে তবে কাজা ও কাফফারা উভয়ই ওয়াজিব হবে। কাফফারার মাসআলা অভিজ্ঞ ওলামায়ে কেরামের থেকে জেনে নেবেন।\n\n
    </string>
    <string-array name="dualist_array">
        <!--<item>{"title":"'Dua Title 2'","bng":"'Bangla 2'","bngmeaning":"'Ortho'","ar":"'Arabic 2'"}</item>-->
        <item>{"title":"'রোজার নিয়ত'","bng":"'নাওয়াইতু আন আছুমা গদাম মিন শাহরি রমাদ্বানাল মুবারকি ফারদ্বল্লাকা ইয়া আল্লাহু ফাতাক্বব্বাল মিন্নী ইন্নাকা আংতাস সামীউল আলীম।'","bngmeaning":"'হে আল্লাহ পাক! আপনার সন্তুষ্টির জন্য আগামীকালের রমাদ্বান শরীফ-এর ফরয রোযা রাখার নিয়ত করছি। আমার তরফ থেকে আপনি তা কবুল করুন। নিশ্চয়ই আপনি সর্বশ্রোতা , সর্বজ্ঞাত।'","ar":"' نويت ان اصوم غدا من شهر رمضان المبارك فرضا لك ياالله فتقبل منى انك انت السميع العليم.'"}</item>
        <item>{"title":"'ইফতার করার দোয়া:'","bng":"'আল্লাহুম্মা সুমতু লাকা, ওয়া তাওআক্কালতু আ‘লা রিঝক্বিকা, ওয়া আফতারতু বিরাহমাতিকা ইয়া আরহামার রহিমীন'","bngmeaning":"'হে আল্লাহ পাক! আমি আপনারই সন্তুষ্টির জন্য রোযা রেখেছি এবং আপনারই দেয়া রিযিক দ্বারা ইফতার করছি।'","ar":"' اللهم لك صمت و على رزقك افطرت.'"}</item>

    </string-array>
</resources>
