<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:gravity="left|center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:textAlignment="center"
            android:text="@string/ramdan_no_title"
            android:textColor="@color/colorTextLight"
            android:textSize="20dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ramdan_no"
            />
        <TextView
            android:layout_width="90dp"
            android:textAlignment="center"
            android:text="@string/seheri"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTextLight"
            android:textSize="20dp"
            android:id="@+id/seheri_time"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="80dp"
            android:textAlignment="center"
            android:text="@string/iftar"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTextLight"
            android:textSize="20dp"
            android:id="@+id/iftar_time"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="100dp"
            android:textAlignment="center"
            android:text="@string/tarikh"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTextLight"
            android:textSize="20dp"
            android:id="@+id/ramdan_date"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
