<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context="net.digitalbd.ramadan.MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:padding="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/welcom_icon"
                    android:textAlignment="center"
                   android:id="@+id/welcome_logo"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome_title"
                    android:text="@string/romjanerMessage"
                    android:layout_below="@+id/welcome_logo"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/column_01"
                    android:layout_below="@+id/welcome_title"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/seheri"
                        android:textSize="20dp"
                        android:textColor="@color/subtitleWelcome"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text=":"
                        android:textSize="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/subtitleWelcome"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textSize="20dp"
                        android:id="@+id/welcom_sheheri"
                        android:textColor="@color/subtitleWelcome"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/column_02"
                    android:layout_below="@+id/column_01"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/iftar"
                        android:textSize="20dp"
                        android:textColor="@color/subtitleWelcome"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text=":"
                        android:textSize="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/subtitleWelcome"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textSize="20dp"
                        android:id="@+id/welcom_ifter"
                        android:textColor="@color/subtitleWelcome"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/column_03"
                    android:layout_below="@+id/column_02"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:id="@+id/display_distric"
                        android:textColor="@color/colorAccent"
                        />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        app:menu="@menu/navigation" />
</LinearLayout>
